# opengl_renderer

./: .gitignore  CMakeLists.txt
res/shader/: color_fragment.glsl  color_vertex.glsl  fragment.glsl  texture_fragment.glsl  texture_vertex.glsl
src/: main.c  state.h
src/gfx/: gfx.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h  window.c  window.h
src/util/: log.h  types.h
